Update config files

--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Salim Bouzebda"
   avatar           : "Salim_Bouzebda.jpg"
   bio              : "Professeur des Universités,<br> Deputy director of LMAC, <br>Université de Technologie de Compiègne"
-  location         : "Compiègne"
-  employer         :
+  location         : "Compiègne, France"
+  employer         : "Université de Technologies de Compiègne"
   pubmed           :
   googlescholar    :
   email            :  salim.bouzebda-nospam@utc.fr
