Update config files

--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      :
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/salim-bouzebda-b3333599/?originalSubdomain=fr"
+  linkedin         : "salim-bouzebda-b3333599/?originalSubdomain=fr"
   # orcid            : # "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
