--- a/_config.yml
+++ b/_config.yml
@@ -182,9 +182,12 @@ collections:
     output: true
     permalink: /:collection/:path/
   portfolio:
-    output: true
+    output: false
     permalink: /:collection/:path/
   talks:
+    output: true
+    permalink: /:collection/:path/
+  students:
     output: true
     permalink: /:collection/:path/
 
