--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,8 +18,8 @@ main:
   - title: "Students"
     url: /students/
 
-  - title: "CV"
-      url: /cv/
+  # - title: "CV"
+      # url: /cv/
     
   # - title: "Guide"
     # url: /markdown/
