--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Salim Bouzebda"
   avatar           : "Salim_Bouzebda.jpg"
-  bio              : "Professeur des Universités,<br> Deputy director of LMAC, <br>Université de Technologie de Compiègne"
+  bio              : "Professeur des Universités,<br> Deputy director of LMAC, <br>Univ. de Technologie de Compiègne"
   location         : "Compiègne, France"
-  employer         : "Université de Technologies de Compiègne"
+  employer         : "Univ. de Technologies de Compiègne"
   pubmed           :
   googlescholar    :
   email            :  salim.bouzebda-nospam@utc.fr
