--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         : "Univ. de Technologies de Compiègne"
   pubmed           :
   googlescholar    :
-  email            :  salim.bouzebda-nospam@utc.fr
+  email            :  salim.bouzebda@utc.fr
   researchgate     :  "https://www.researchgate.net/profile/Salim_Bouzebda"
   uri              :
   bitbucket        :
