--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,11 +3,14 @@ main:
   - title: "Papers"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Pipeplines"
+    url: /publications/preprints/
 
-  - title: "Teaching"
-    url: /teaching/ 
+  # - title: "Talks"
+    # url: /talks/
+
+  # - title: "Teaching"
+    # url: /teaching/
    
   - title: "Students"
     url: /students/
@@ -18,8 +21,8 @@ main:
   # - title: "Blog Posts"
     # url: /year-archive/
     
-  # - title: "CV"
-      # url: /cv/
+  - title: "CV"
+      url: /cv/
     
   # - title: "Guide"
     # url: /markdown/
